# mssg

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  meson.build
example/: config  mssg
example/src/: base.html  extra.html  index.html
example/src/blog/: index.html
example/src/blog/2009/01/05/past/: index.html
example/src/blog/2019/12/26/: index.html
example/src/blog/2020/01/01/new-year/: index.html
example/src/blog/2020/01/05/temp-1/: index.html
example/template/: base.html
example/test/: config
example/test/src/: base.html  index.html
site/: base.html  config  index.html
site/dst/: index.html  style.css
site/dst/about/: index.html
site/src/: base.html  index.html  style.css
site/src/about/: index.html
src/: blog.c  blog.h  blog.rs  cli.rs  config.c  config.h  copy.c  copy.h  extra.c  extra.h  files.c  files.h  files.rs  generator.c  generic_list.h  genproc.c  genproc.h  hashmap.c  hashmap.h  log.c  log.h  m_mkdir.h  main.c  main.rs  md.rs  mdtohtml.c  messages.h  minify.c  minify.h  mssg.h  parser.c  parser.h  states.c  states.h  template.c  template.h  templates.c  templates.h  test.c  vars.c  (+1 more)
src/core/: gen.rs  host.rs  mod.rs  msg.rs  new.rs
src/extra/: date.c  date.h  m_mkdir.h
templates/: utteranc_temp.html
