[package]
name = "mssg"
version = "0.1.0"
authors = ["martin <mtcw@disroot.org>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
overflow-checks = true

[profile.dev]
opt-level = 3
debug = true
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = "0.5.0"
