[package]
name = "mssg"
version = "0.0.1"
authors = ["martin <mtcw@disroot.org>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true

[profile.dev]
opt-level = 3
debug = true
overflow-checks = true
lto = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = "0.5.0"             # Colors
pulldown-cmark = "0.6.0"    # CommonMark (a version of markdown)
toml = "0.5"                # Toml
clap = "~2.33"              # CLI argument parsing
walkdir = "2"

[dependencies.image]        # Thumbnail
version = "0.22.2"
default-features = false
features = ["jpeg_rayon", "jpeg", "png_codec", "gif_codec"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
