[package]
name = "mssg"
version = "0.0.1"
authors = ["martin <mtcw@disroot.org>"]
edition = "2018"
repository = "https://github.com/marttcw/mssg"
readme = "README.md"
license = "MIT"
description = "Mart's Static Site Generator written in Rust (v2018)"

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true

[profile.dev]
opt-level = 3
debug = true
overflow-checks = true
lto = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = "0.5.0"             # Colors
pulldown-cmark = "0.6.0"    # CommonMark (a version of markdown)
toml = "0.5"                # Toml
clap = "~2.33"              # CLI argument parsing
walkdir = "2"               # Multiplatform directory walking
actix-web = "1.0"           # Web server
actix-files = "0.1.4"       # Static
futures = "0.1"
env_logger = "0.7"

[dependencies.image]        # Thumbnail
version = "0.22.2"
default-features = false
features = ["jpeg_rayon", "jpeg", "png_codec", "gif_codec"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
